<resources>
    <string name="app_name">MoviesApp</string>
    <string name="search_movie">Search</string>
    <string name="more_info">More info</string>
    <string name="splash_screen_text">Find the movie you want</string>
    <string name="empty_previous_searches">No previous searches yet</string>
    <string name="splash_image">splash image</string>
    <string name="cover_photo">cover photo</string>
    <string name="poster">poster</string>
    <string name="tmdb_green">tmdb_logo_green</string>
    <string name="search_green">serach_green</string>
    <string name="search_for_movie">Search for a movie</string>
    <string name="search">search</string>
    <string name="back">back</string>
    <string name="above_eighteen">18+</string>
    <string name="released_in">Release date:</string>
    <string name="revenue">Revenue:</string>
    <string name="play_time">Play time:</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="writers">Writers</string>
    <string name="all_cast">
        <u><![CDATA[All Cast & Crew]]></u>
    </string>
    <string name="you_might_like">You might also like</string>
    <string name="check_your_internet_connection">Check your internet connection then</string>
    <string name="try_again"> <u>try again</u></string>
    <string name="show_more">
        <u>Show more</u>
    </string>
    <string name="home">The Movie App</string>
    <string name="retry">retry</string>
    <string name="no_items_to_show">no items to show</string>
    <string name="unknown_eror">An Error Has Occurred Please Try Again</string>
    <string name="play_trailer">play_trailer</string>
    <string name="rating">Rating</string>

</resources>
