<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/tmdb_secondary_color">
    <TextView
            android:text="@string/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cast"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:textColor="@color/white"
    />
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/cast_recycler_view" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/director" app:layout_constraintStart_toStartOf="@+id/cast_recycler_view"
            app:layout_constraintEnd_toEndOf="@+id/cast_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/cast_recycler_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            android:textColor="@color/white" android:layout_marginStart="8dp"/>
    <TextView
            tools:text="kary jobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/director_text_view" app:layout_constraintStart_toStartOf="@+id/director"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="@+id/director" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/director" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="4dp" android:textColor="@color/_transparent_tmdb_primary_color"/>
    <TextView
            android:text="@string/writers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/writers" app:layout_constraintStart_toStartOf="@+id/director"
            app:layout_constraintEnd_toEndOf="@+id/director" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/director_text_view"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            tools:text="kim w. smith"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/writers_text_view" android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintTop_toBottomOf="@+id/writers"
            app:layout_constraintStart_toStartOf="@+id/director_text_view"
            android:textColor="@color/_transparent_tmdb_primary_color"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/all_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/credits_details_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/writers_text_view" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/navy_blue"
            android:fontFamily="@font/abhaya_libre" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
